# neojumper

./: CMakeLists.txt  Makefile  README.md  build_win64.bat  config.ini  openjumper
assets/fonts/: COPYRIGHT.txt
shaders/: shader3D.frag
sounds/music/: authors.txt
src/: audio.cpp  data.hpp  gfx.cpp  input.cpp  interface.hpp  main.cpp  system.cpp
src/game/: controls.cpp  game.cpp  game.hpp  message.cpp  message.hpp  warmup.cpp  warmup.hpp
src/game/components/: controls.cpp  controls.hpp  hud.cpp  hud.hpp  message.cpp  message.hpp  warmup.cpp  warmup.hpp
src/includes/: audio.hpp  component.hpp  data.hpp  graphics.hpp  includes.hpp  interface.hpp  system.hpp
src/includes/utils/: audio.hpp  config.hpp  data.hpp  graphics.hpp  input.hpp  system.hpp
src/menu/: menu.cpp  menu.hpp  menu_environment.cpp  menu_environment.hpp
src/menu/components/: background.cpp  background.hpp  copyright.cpp  copyright.hpp  logo_renderer.cpp  logo_renderer.hpp  selector.cpp  selector.hpp
src/scene/: entity.hpp  environment.cpp  environment.hpp  jumper.hpp  scene.cpp  scene.hpp
src/scene/entities/: jumper.cpp  jumper.hpp
src/utils/: audio.cpp  config.cpp  data.cpp  gfx.cpp  graphics.cpp  input.cpp  system.cpp
